Fix slideshow and title alignment in details page

--- a/styles/base.css
+++ b/styles/base.css
@@ -87,4 +87,5 @@ header > p{
     font-family: 'Gallient'; 
     font-weight: bolder;
     cursor: pointer;
+    letter-spacing: 1px;
 }
